fix: use prose-lg on mobile as well

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -16,7 +16,7 @@
     @apply max-w-5xl;
     @apply prose-invert;
     @apply prose-code:text-black;
-    @apply md:prose-lg;
+    @apply prose-lg;
   }
 }
 
